--- a/packages/zet-component/package.json
+++ b/packages/zet-component/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.10.2",
+    "@emotion/core": "^10.0.10",
     "bizcharts": "^3.4.3",
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "classnames": "^2.2.6",
