--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     ]
   },
   "husky": {
-    "hooks": {
-    }
+    "hooks": {}
   },
   "devDependencies": {
     "husky": "^1.3.1",
@@ -29,5 +28,8 @@
     "lint-staged": "^8.1.5",
     "tslint": "^5.14.0",
     "typescript": "^3.4.5"
+  },
+  "dependencies": {
+    "zet-utils": "^1.0.2"
   }
 }
