--- a/packages/zet-component/package.json
+++ b/packages/zet-component/package.json
@@ -1,51 +1,42 @@
 {
-  "name": "zet-component",
-  "version": "0.1.42",
-  "description": "zet-ui",
-  "main": "dist/zet-ui.js",
-  "module": "dist/index.esm.js",
-  "authors": {
-    "name": "wangqj",
-    "email": "qiaojienet@163.com"
-  },
-  "repository": "https://github.com/9-web/zet-component",
-  "scripts": {
-    "dev": "umi-lib doc dev",
-    "build:doc": "umi-lib doc build",
-    "deploy:doc": "npm run build:doc && umi-lib doc deploy",
-    "build": "umi-lib build",
-    "build:watch": "umi-lib build --watch",
-    "tslint": "./node_modules/.bin/tslint -c tslint.json 'src/**/*.{ts,tsx}'"
-  },
-  "devDependencies": {
-    "@types/classnames": "^2.2.7",
-    "antd": "^3.13.0",
-    "docz": "^0.13.7",
-    "prop-types": "^15.7.2",
-    "react-powerplug": "^1.0.0",
-    "tslint": "^5.14.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.4.5",
-    "typescript-tslint-plugin": "^0.3.1",
-    "umi-library": "1.3.0"
-  },
-  "typings": "dist/index.d.ts",
-  "license": "MIT",
-  "peerDependencies": {
-    "antd": "^3.13.0",
-    "prop-types": "^15.7.2",
-    "react": ">=16.0.0",
-    "react-dom": ">=16.0.0"
-  },
-  "dependencies": {
-    "@antv/data-set": "^0.10.2",
-    "@emotion/core": "^10.0.10",
-    "bizcharts": "^3.4.3",
-    "bizcharts-plugin-slider": "^2.1.1-beta.1",
-    "classnames": "^2.2.6",
-    "docz-theme-default": "^0.13.7",
-    "moment": "^2.24.0",
-    "zet-utils": "^1.0.10"
-  },
-  "gitHead": "d315ba17f1a858fd79c8c2dfa42963c83e3b4418"
+	"name": "zet-component",
+	"version": "0.1.42",
+	"description": "zet-ui",
+	"main": "dist/zet-ui.js",
+	"module": "dist/index.esm.js",
+	"authors": {
+		"name": "wangqj",
+		"email": "qiaojienet@163.com"
+	},
+	"repository": "https://github.com/9-web/zet-component",
+	"devDependencies": {
+		"@types/classnames": "^2.2.7",
+		"antd": "^3.13.0",
+		"docz": "^0.13.7",
+		"prop-types": "^15.7.2",
+		"react-powerplug": "^1.0.0",
+		"tslint": "^5.14.0",
+		"tslint-react": "^3.6.0",
+		"typescript": "^3.4.5",
+		"typescript-tslint-plugin": "^0.3.1",
+		"umi-library": "1.3.0"
+	},
+	"typings": "dist/index.d.ts",
+	"license": "MIT",
+	"peerDependencies": {
+		"antd": "^3.13.0",
+		"prop-types": "^15.7.2",
+		"react": ">=16.0.0",
+		"react-dom": ">=16.0.0"
+	},
+	"dependencies": {
+		"@antv/data-set": "^0.10.2",
+		"@emotion/core": "^10.0.10",
+		"bizcharts": "^3.4.3",
+		"bizcharts-plugin-slider": "^2.1.1-beta.1",
+		"classnames": "^2.2.6",
+		"docz-theme-default": "^0.13.7",
+		"moment": "^2.24.0"
+	},
+	"gitHead": "d315ba17f1a858fd79c8c2dfa42963c83e3b4418"
 }
