--- a/packages/zet-component/package.json
+++ b/packages/zet-component/package.json
@@ -44,7 +44,8 @@
 		"bizcharts-plugin-slider": "^2.1.1-beta.1",
 		"classnames": "^2.2.6",
 		"docz-theme-default": "^0.13.7",
-		"moment": "^2.24.0"
+		"moment": "^2.24.0",
+		"zet-utils": "^1.0.10"
 	},
 	"gitHead": "9310ba2784900ec75e111f29dca2c174d49cf897"
 }
